src/components/styles/Sidebar.css
.sidebarContainer {
	width: 30%;
	height: 100%;
	display: flex;
	color: #000;
	background-color: #ffff;
	position: fixed;
	z-index: 100;
}

.sidebar {
	overflow-y: auto;
	padding-left: 5vw;
}

.sidebarSmallTitle {
	font-weight: 700;
}

.contactColumn {
	padding-bottom: 2rem;
	width: 60%;
}

.skillsColumn {
	width: 60%;
}

.arrow {
	position: absolute;
}

/*Mobile*/
@media (max-width: 576px) {
	.sidebarContainer {
		width: 80%;
	}

	.sidebar {
		padding-left: 2rem;
	}

	.contactColumn {
		width: 80%;
	}

	.skillsColumn {
		width: 80%;
		padding-top: 2rem;
	}

	h2 {
		font-size: 22px;
	}

	.sidebarSmallTitle {
		font-size: 16px;
	}

	.info {
		font-size: 14px;
		margin-top: -10px;
	}
}

/*Small tablets*/
@media only screen and (min-width: 577px) and (max-width: 768px) {
	.sidebarContainer {
		width: 50%;
	}
}

/*Large tablets*/
@media only screen and (min-width: 769px) and (max-width: 1024px) {
	.sidebarContainer {
		width: 35%;
	}
}

/*Small desktops*/
@media only screen and (min-width: 1025px) and (max-width: 1440px) {
	.skillsColumn {
		padding-top: 0;
	}
}

/*Large desktops*/
@media only screen and (min-width: 1550px) {
	.sidebar {
		margin: auto;
	}
}

@media only screen and (min-width: 1200px) {
}

@media only screen and (min-width: 1025px) and (max-width: 1150px) {
	.sidebarContainer {
		width: 35%;
	}
}

@media only screen and (max-width: 1024px) {
	.sidebar {
		margin: auto;
	}

	.arrow {
		left: 100%;
		top: 50%;
	}
}

